--- a/_config.yml
+++ b/_config.yml
@@ -73,7 +73,7 @@ theme_mode: # [light|dark]
 img_cdn: ''
 
 # the avatar on sidebar, support local or CORS resources
-avatar: "/commons/avatar.jpg"
+avatar: ""
 
 # boolean type, the global switch for TOC in posts.
 toc: true
