--- a/_config.yml
+++ b/_config.yml
@@ -89,13 +89,13 @@ comments:
     issue_term: # < url | pathname | title | ...>
   # Giscus options › https://giscus.app
   giscus:
-    repo: # <gh-username>/<repo>
-    repo_id:
-    category:
-    category_id:
+    repo: "winey-dev/winey-dev.github.io"
+    repo_id: "R_kgDOLAmwWA"
+    category: "Comments"
+    category_id: "DIC_kwDOLAmwWM4CcP6u"
     mapping: # optional, default to 'pathname'
     input_position: # optional, default to 'bottom'
-    lang: # optional, default to the value of `site.lang`
+    lang: "ko" # optional, default to the value of `site.lang`
     reactions_enabled: # optional, default to the value of `1`
 
 # Self-hosted static assets, optional › https://github.com/cotes2020/chirpy-static-assets
